<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_r12"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/hint_share_to"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/ll_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:srcCompat="@drawable/share_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/share_wechat"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:srcCompat="@drawable/share_discovery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/share_discovery"
                    android:textColor="@color/second_text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:srcCompat="@drawable/share_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/share_qq"
                    android:textColor="@color/second_text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_qzone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    app:srcCompat="@drawable/share_qzone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/share_qzone"
                    android:textColor="@color/second_text"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_white_r12"
        android:gravity="center"
        android:text="@string/hint_cancel"
        android:textColor="@color/second_text"
        android:textSize="20sp" />

</LinearLayout>